Update CSS styles for path element and add SvgAnimatedOpening component to RootLayout

--- a/app/globals.css
+++ b/app/globals.css
@@ -90,3 +90,10 @@
 .capitalize-first:first-letter {
   text-transform: uppercase;
 }
+
+.path {
+    fill: none;
+    stroke: black;
+    stroke-width: 2;
+  }
+  
