--- a/app/globals.css
+++ b/app/globals.css
@@ -91,9 +91,31 @@
   text-transform: uppercase;
 }
 
-.path {
-    fill: none;
-    stroke: black;
-    stroke-width: 2;
+.animate-openingGIF {
+  animation: openingGIF 4s ease-in-out;
+}
+
+@keyframes openingGIF {
+  0% {
+    transform: scale(1);
+    opacity: 0;
   }
+  10% {
+    transform: scale(1.1);
+    opacity: 1;
+  }
+  50% {
+    transform: scale(1.1);
+    opacity: 1;
+  }
+  90% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 0;
+  }
+  
+}
   
